tests/field/assign_variable_to_method.rev
struct Foo {
    fn foo() {}
}

var bar = 4

var f = Foo()

f.foo = bar // error: assigning to method is not allowed